added buttons with pics and positioned

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <iframe width="0" height="0" src="https://www.youtube.com/embed/94yYC-SFCzs?rel=0&amp&autoplay=1;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+<div class="intro">
 <h1>Welcome to CrystalGemsCollector!</h1>
 <br>
 <p>You will be given a random number at the start of the game.</p>
@@ -31,7 +31,27 @@
 <br>
 <p>Good luck!</p>
 <br>
-<div class="container">
+</div>
+<div id="rannum">
+
+</div>
+<div id="wl">
+
+</div>
+<div class="buttons">
+<div id="amethyst">
+<button><img src="assets/images/amethyst.png" style="width:60px;height:60px;"></button>
+</div>
+<div id="garnet">
+<button><img src="assets/images/garnet.png" style="width:60px;height:60px;"></button>
+</div>
+<div id="pearl">
+<button><img src="assets/images/pearl.png" style="width:60px;height:60px;"></button>
+</div>
+<div id="steven">
+<button><img src="assets/images/steven.png" style="width:60px;height:60px;"></button>
+</div>
+</div>
 <!-- 
     <div class="row"> -->
 
