added wins losses

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-    <!-- Added link to the jQuery Library -->
-    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+
 
 
 
@@ -32,12 +31,6 @@
 <p>Good luck!</p>
 <br>
 </div>
-<div id="rannum">
-
-</div>
-<div id="wl">
-
-</div>
 <div class="buttons">
 <div id="amethyst">
 <button><img src="assets/images/amethyst.png" style="width:60px;height:60px;"></button>
@@ -52,45 +45,15 @@
 <button><img src="assets/images/steven.png" style="width:60px;height:60px;"></button>
 </div>
 </div>
-<!-- 
-    <div class="row"> -->
-
-        <!-- Calculator Panel -->
-<!--         <div class="col-lg-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Calculator</h3>
-                </div>
-
-                <div class="panel-body">
-                            <button id="crystal1"><h1>1</h1></button>
-                            <button id="crystal2" class="btn btn-primary number" value=2><h1>2</h1></button>
-                            <button id="crystal3" class="btn btn-primary number" value=3><h1>3</h1></button>
-                            <button id="crystal4" class="btn btn-danger operator" value=plus><h1>+</h1></button>
-                            <br><br>
-                </div>
-            </div>
-        </div> -->
-
-        <!-- Result Panel -->
-<!--         <div class="col-lg-6">
-        <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Result</h3>
-                </div>
-                <div class="panel-body">
-                    <h1 id="firstNumber"></h1>
-                    <h1 id="operator"></h1>
-                    <h1 id="secondNumber"></h1>
-                    <hr>
-                    <h1 id="result"></h1>
-                </div>
-            </div>    
-        </div>
-    </div>
-</div> -->
-
-<script type="text/javascript" src="game.js"></script>
+<div id="startnumber"></div>
+<div id="win-lose"></div>
+<div id="win-loss-tracker">
+    <div><h3>Wins: </h3><span id="wins"></span></div>
+    <div><h3>Losses: </h3><span id="losses"></span></div>
+</div>
+    <!-- Added link to the jQuery Library -->
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 
 
