added all the boxes with some css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 <p>Good luck!</p>
 <br>
 </div>
-<div class="buttons">
+
+<div id="win-lose"></div>
+<div id="win-loss-tracker">
+    <div><h3>Wins: </h3><span id="wins"></span></div>
+    <div><h3>Losses: </h3><span id="losses"></span></div>
+</div>
+<div id="startNumber"><h3>Random Number: </h3> <span id="randomNumber"></span></div>
+<div id= "ct"><h3>Your total so far is: </h3> <span id="currentTotal"></span></div>
 <div id="amethyst">
 <button><img src="assets/images/amethyst.png" style="width:60px;height:60px;"></button>
 </div>
@@ -44,13 +51,9 @@
 <div id="steven">
 <button><img src="assets/images/steven.png" style="width:60px;height:60px;"></button>
 </div>
-</div>
-<div id="startnumber"></div>
-<div id="win-lose"></div>
-<div id="win-loss-tracker">
-    <div><h3>Wins: </h3><span id="wins"></span></div>
-    <div><h3>Losses: </h3><span id="losses"></span></div>
-</div>
+
+
+
     <!-- Added link to the jQuery Library -->
     <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
