--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <br>
 <p>You will be given a random number at the start of the game.</p>
 <br>
-<p>There are three crystal gems below and Steven. By clicking on one of them, you will add a specific amount of points to your total score.</p>
+<p>There are three crystal gems and Steven. By clicking on one of them, you will add a specific amount of points to your total score.</p>
 <br>
 <p>You win the game by matching your total score to the random number and you lose the game if your score goes above the random number.</p>
 <br>
@@ -32,25 +32,23 @@
 <br>
 </div>
 
-<div id="win-lose"></div>
 <div id="win-loss-tracker">
     <div><h3>Wins: </h3><span id="wins"></span></div>
     <div><h3>Losses: </h3><span id="losses"></span></div>
 </div>
-<div id="startNumber"><h3>Random Number: </h3> <span id="randomNumber"></span></div>
+<div id="startNumber"><h3>Random Number: </h3> <span id="ranNum"></span></div>
 <div id= "ct"><h3>Your total so far is: </h3> <span id="currentTotal"></span></div>
-<div id="amethyst">
-<button><img src="assets/images/amethyst.png" style="width:60px;height:60px;"></button>
+<div id="first-button">
+<button><img src="assets/images/amethyst.png" id="amethyst" style="width:60px;height:60px;"></button>
 </div>
-<div id="garnet">
-<button><img src="assets/images/garnet.png" style="width:60px;height:60px;"></button>
+<div id="second-button">
+<button><img src="assets/images/garnet.png" id="garnet" style="width:60px;height:60px;"></button></div>
+
+<button><img src="assets/images/pearl.png" id="pearl" style="width:60px;height:60px;"></button>
 </div>
-<div id="pearl">
-<button><img src="assets/images/pearl.png" style="width:60px;height:60px;"></button>
-</div>
-<div id="steven">
-<button><img src="assets/images/steven.png" style="width:60px;height:60px;"></button>
-</div>
+
+<button><img src="assets/images/steven.png" id="steven" style="width:60px;height:60px;"></button>
+
 
 
 
